force-app/main/default/objects/extra_curricular_activity__c/extra_curricular_activity__c.object-meta.xml
<CustomObject>
    <label>extra curricular activity</label>
    <nameField>
        <label>Student  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>extra curricular activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>