force-app/main/default/objects/extra_curricular_activity__c/fields/NCC__c.field-meta.xml
<CustomField>
    <fullName>NCC__c</fullName>
    <label>NCC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NCC</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>