force-app/main/default/objects/extra_curricular_activity__c/fields/Sports__c.field-meta.xml
<CustomField>
    <fullName>Sports__c</fullName>
    <label>Sports</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Badminton</fullName>
            </value>
            <value>
                <fullName>volleyball</fullName>
            </value>
            <value>
                <fullName>basketball</fullName>
            </value>
            <value>
                <fullName>Skates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>