force-app/main/default/objects/extra_curricular_activity__c/fields/Yoga__c.field-meta.xml
<CustomField>
    <fullName>Yoga__c</fullName>
    <label>Yoga</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Beginning</fullName>
            </value>
            <value>
                <fullName>intermediate</fullName>
            </value>
            <value>
                <fullName>Professional</fullName>
            </value>
            <value>
                <fullName>none</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>